Fix menu item spacing

--- a/src/CustomMenu.scss
+++ b/src/CustomMenu.scss
@@ -9,7 +9,7 @@
 
 .CustomMenu-item-container, .CustomMenu-header-container {
   padding: .5rem;
-  flex: 1 0 auto;
+  flex: 0 0 auto;
   display: flex;
   min-height: 2rem;
   align-items: center;
